--- a/src/index.scss
+++ b/src/index.scss
@@ -47,3 +47,24 @@ body::-webkit-scrollbar-thumb {
 	max-width: 1280px;
 	margin: 0 auto;
 }
+
+button.default,
+a.default {
+	font-weight: 600;
+	font-size: 16px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: none;
+	outline: none;
+	padding: 10px 15px;
+	background-color: transparent;
+	transition: all 0.2s ease-in-out;
+	background-color: var(--primary-color);
+	text-decoration: none;
+
+	&:hover {
+		filter: brightness(0.9);
+		color: #fff;
+	}
+}
